tests/baselines/reference/emptyTuplesTypeAssertion02.errors.txt
tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion02.ts(1,15): error TS1122: A tuple type element list cannot be empty.


==== tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion02.ts (1 errors) ====
    let x = [] as [];
                  ~~
!!! error TS1122: A tuple type element list cannot be empty.
    let y = x[0];